@@ -1,1 +1,2 @@
-/credentials.php
+/utilities/credentials.php
+/QueryProgetto.sql
